import "dccl/option_extensions.proto";
import "goby/common/protobuf/app_config.proto";
import "goby/middleware/protobuf/interprocess_config.proto";

message TestConfig
{
    optional goby.protobuf.AppConfig app = 1;
    optional goby.protobuf.InterProcessPortalConfig interprocess = 2;
}

message Widget
{
    optional int32 b = 1;
}
